update to jvm21 optimize GUI